--- a/index.html
+++ b/index.html
@@ -28,12 +28,6 @@
         </form>
         <div class="main">
           <ul class="list list-unstyled">
-          	<li>
-          		<label for="a1">
-          			<input id="a1" type="checkbox">
-          			Задача 1
-          		</label>
-          	</li>
           	
           </ul>
         </div>
@@ -63,6 +57,6 @@
       <div class="col-xs-1 col-md-4"></div>
     </div>
   </div>
-  <script type="text/javascript" src="js/"></script>
+  <script type="text/javascript" src="js/helper.js"></script>
 </body>
 </html>
