--- a/index.html
+++ b/index.html
@@ -25,10 +25,20 @@
         <form class="header">
           <h1 class="text-center">todos</h1>
           <input type="text" class="form-control" placeholder="What needs to be done?" autofocus>
+          <input type="text" class="form-control" placeholder="Second" autofocus>
+          <input type="text" class="form-control" placeholder="Third" autofocus>
         </form>
         <div class="main">
-          <ul class="list list-unstyled">
-          	
+          <ul id="listTodo" class="list list-unstyled">
+          	<li>
+             <button class='cl'>test 1</button> 
+            </li>
+            <li>
+             <button class='cl'>test 3</button> 
+            </li>
+            <li>
+             <button>test 2</button> 
+            </li>
           </ul>
         </div>
         <div class="footer">
@@ -50,7 +60,7 @@
                 <a href="#/complited">Завершенные</a>
               </li>
             </ul>
-            <button class="clear-complited btn btn-info btn-xs pull-right">Очистить завершенные</button>
+            <button id="clear-complited" class="clear-complited btn btn-info btn-xs pull-right">Очистить завершенные</button>
           <div>
         </div>
       </div>
@@ -58,5 +68,6 @@
     </div>
   </div>
   <script type="text/javascript" src="js/helper.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
