--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-10 col-md-4  col-md-offset-4">
-        <form class="header">
+        <div class="header">
           <h1 class="text-center">todos</h1>
-          <input type="text" class="form-control" placeholder="What needs to be done?" autofocus>
-        </form>
+          <input type="text" id="newTodoText" class="form-control" placeholder="What needs to be done?" autofocus>
+        </div>
         <div class="main">
-          <ul class="list list-unstyled">
+          <ul id="todosList" class="list list-unstyled">
           </ul>
         </div>
         <div class="footer">
@@ -57,5 +57,6 @@
     </div>
   </div>
   <script type="text/javascript" src="js/helper.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
